--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="card">
                             <img src="images/ProyectoSeguro.png" alt="">
                             <h3>Cotizador de seguros</h3>
-                            <p>Elabora un presupuesto para la contratación de un seguro dependiendo varios parametros</p>
+                            <p>Esta pagina elabora un presupuesto para la contratación de un seguro dependiendo varios parametros</p>
                             <p id="tecnologias">Tecnologias utilizadas: sass,javascript,html</p>
                             <div class='links'><a href=""><img src="images/github.png" alt="">Ver codigo</a>
                                 <a href=""><img src="images/88422.png" alt="">Ver proyecto</a></div>
@@ -240,7 +240,7 @@
                         <div class="card">
                             <img src="images/clima.png" alt="">
                             <h3>buscador del estado del clima por ciudad</h3>
-                            <p>Utilizacion de fetchApi para dar la informacion del clima</p>
+                            <p>Implementación de fetchApi para dar la informacion del clima</p>
                             <p id="tecnologias">Tecnologias utilizadas: sass,javascript,html,FetchApi</p>
                             <div class='links'><a href=""><img src="images/github.png" alt="">Ver codigo</a>
                                 <a href=""><img src="images/88422.png" alt=""> Ver proyecto</a></div>
